add item and hand transformer

--- a/core/src/main/resources/assets/hand_transformer/i18n/en_us.json
+++ b/core/src/main/resources/assets/hand_transformer/i18n/en_us.json
@@ -1,11 +1,40 @@
 {
   "hand_transformer": {
     "settings": {
+      "header":{
+        "item":{
+          "name": "Item Settings"
+        },
+        "hand": {
+          "name": "Hand Settings"
+        }
+      },
       "enabled": {
         "name": "Enabled"
       },
       "itemSize": {
         "name": "Change Item Size"
+      },
+      "itemX": {
+        "name": "Item X"
+      },
+      "itemY": {
+        "name": "Item Y"
+      },
+      "itemZ": {
+        "name": "Item Z"
+      },
+      "handSize": {
+        "name": "Change Hand Size"
+      },
+      "handX": {
+        "name": "Hand X"
+      },
+      "handY": {
+        "name": "Hand Y"
+      },
+      "handZ": {
+        "name": "Hand Z"
       }
     }
   }
