added description for Hand/Item Settings

--- a/core/src/main/resources/assets/hand_transformer/i18n/en_us.json
+++ b/core/src/main/resources/assets/hand_transformer/i18n/en_us.json
@@ -11,6 +11,7 @@
       },
       "itemSettings": {
         "name": "Item Settings",
+        "description": "You can change the size of the item in your hand.",
         "itemSize": {
           "name": "Change Item Size"
         },
@@ -26,6 +27,7 @@
       },
       "handSettings": {
         "name": "Hand Settings",
+        "description": "You can change the size of your hand.",
         "handSize": {
           "name": "Change Hand Size"
         },
