update Animation Duration translation

--- a/core/src/main/resources/assets/hand_transformer/i18n/en_us.json
+++ b/core/src/main/resources/assets/hand_transformer/i18n/en_us.json
@@ -49,7 +49,7 @@
         "name": "Swing Animation Settings",
         "description": "You can change the swing animation speed.",
         "swingDurationTicks": {
-          "name": "Animation Duration (Ticks)"
+          "name": "Animation Duration (Ticks) default: 6"
         }
       },
       "enabled": {
